<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".changeInformationActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/touBtn2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/finishBtn"
            android:layout_alignParentTop="true"
            android:text="@string/uploadTou" />

        <Button
        android:id="@+id/touBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/takePic"/>


    <EditText
        android:id="@+id/inpUid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/touBtn"
        android:inputType="text"
        android:textColor="@color/white"
        android:text="@string/nickname" />

    <EditText
        android:id="@+id/inpName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/inpUid"
        android:inputType="text"
        android:textColor="@color/white"
        android:text="@string/name" />

    <EditText
        android:id="@+id/inpChance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/inpName"
        android:layout_centerHorizontal="true"
        android:textColor="@color/white"
        android:inputType="text"
        android:text="@string/chanceId" />

    <EditText
        android:id="@+id/inpWallet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/inpChance"
        android:textColor="@color/white"
        android:ems="10"
        android:inputType="text"
        android:text="@string/walletAddress" />

        <EditText
            android:id="@+id/inpSex"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/inpWallet"
            android:textColor="@color/white"
            android:inputType="text"
            android:text="@string/gender" />

    <EditText
        android:id="@+id/inpCareer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/inpSex"
        android:textColor="@color/white"
        android:inputType="text"
        android:text="@string/career" />



        <EditText
        android:id="@+id/inpRes"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_below="@+id/inpCareer"
        android:layout_centerHorizontal="true"
        android:textColor="@color/black"
        android:background="@android:drawable/alert_light_frame"
        android:inputType="textMultiLine"
        android:text="@string/resuem" />

    <Button
        android:id="@+id/finishBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/inpRes"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/finish" />
        </RelativeLayout>


</ScrollView>